--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 }
 html {
   background-color: #fff9f3;
+  overflow-x: hidden;
 }
 .navbar {
   padding: 2rem;
@@ -81,21 +82,73 @@ html {
   color: #ea7a3a;
 }
 
+.demo-button {
+  position: absolute;
+  top: 75%;
+  color: white;
+  background-color: #673275;
+  padding: 1rem 3rem;
+  border-radius: 3rem;
+  border: none;
+}
+
 .img-container {
   width: 100%;
   height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
   background-color: var(--texthead-color);
 }
 
+.img1 {
+  width: 500px;
+  height: 400px;
+  position: absolute;
+  top: -3.8rem;
+  left: 32.5%;
+  transform: scale(1.2);
+}
+.mob {
+  width: 200px;
+  height: 400px;
+  position: absolute;
+  top: -3.8rem;
+  left: 70%;
+  transform: scale(1.2);
+}
 .trusted-container {
   width: 100%;
+  height: 70vh;
   background-color: var(--background-color);
 }
 .trusted-container h1 {
   font-size: 2rem;
   font-family: "Poppins", sans-serif;
-  padding: 3.5rem 15rem;
+  padding: 3.5rem 5rem;
   color: white;
+}
+
+.trusted-grid-container {
+  margin: 2rem 5rem;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 3rem;
+}
+
+.box-trusted {
+  font-size: 2rem;
+  font-weight: 100;
+  font-family: "Poppins", sans-serif;
+  color: white;
+}
+.box-trusted-number {
+  font-size: 1rem;
+  font-family: "Poppins", sans-serif;
+  padding-top: 1rem;
+  color: white;
+  opacity: 0.6;
 }
 
 .whyus-container {
@@ -152,7 +205,14 @@ html {
   grid-template-columns: repeat(3, 1fr);
   gap: 5rem;
 }
-
+.img2,
+.img3,
+.img4,
+.img5,
+.img6 {
+  width: 600px;
+  height: 500px;
+}
 .box-grid {
   border-radius: 0.5rem;
   color: white;
